Improving final docker image
Also, pushing docker image to jfrog as an upload test. It is working, thanks.